// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Layout should render a regular route with a specified layout and title 1`] = `
<App>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Foo
       | SparkPost
    </title>
  </HelmetWrapper>
  <h1>
    My layout children
  </h1>
</App>
`;

exports[`Component: Layout should render a route that does not specify a layout 1`] = `
<Form>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      With a Default Layout
       | SparkPost
    </title>
  </HelmetWrapper>
  <h1>
    My layout children
  </h1>
</Form>
`;

exports[`Component: Layout should render a route that does not specify a title 1`] = `
<App>
  <h1>
    My layout children
  </h1>
</App>
`;
